Revamp portfolio page with new content and styles
Updated the HTML structure and content for a personal portfolio page, including new metadata, styles, and sections for albums and singles.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,109 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Hello World</title>
-  </head>
-  <body>
-    <h1>Hello, this is my portfolio test page!</h1>
-    <p>成功啦 🎉 这是你的网站主页。</p>
-  </body>
+<html lang="zh-CN">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>严书航 · 作品集</title>
+  <meta name="description" content="严书航的个人作品集，包含影视配乐、流行音乐作品与联系方式。" />
+  <link rel="icon" href="/favicon.ico" />
+  <style>
+    body { background:#0b0c0f; color:#eef2ff; font-family: ui-sans-serif, system-ui; margin:0; }
+    h1,h2,h3 { margin:0 0 12px; }
+    .container { width:min(1000px,92%); margin:auto; padding:20px; }
+    .section { margin:60px 0; }
+    .card { background:#12141a; border:1px solid rgba(255,255,255,.08); padding:20px; border-radius:16px; margin-bottom:20px; }
+    audio { width:100%; margin-top:10px; }
+    iframe { width:100%; border-radius:12px; margin-top:10px; }
+    a { color:#8aeb8f; }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <header>
+      <h1>严书航 · 作品集</h1>
+      <p>作曲 / 编曲 / 混音 / 作词 / 制作，专注影视配乐与流行音乐</p>
+      <p>📧 联系邮箱: <a href="mailto:charlotteyanbest@gmail.com">charlotteyanbest@gmail.com</a></p>
+    </header>
+
+    <section class="section">
+      <h2>专辑 《Dinner Party》 (2025 · 35min)</h2>
+      <p>这是一张十首歌的概念专辑，以“晚宴”为隐喻，将流行、实验与东方元素融合。</p>
+      <div class="card">
+        <h3>Welcome! 欢迎光临！</h3>
+        <p>开场曲，简洁而真诚的邀请，氛围清晰，有东方韵味。</p>
+        <audio controls><source src="audio/welcome.mp3" type="audio/mpeg"></audio>
+      </div>
+      <div class="card">
+        <h3>The World is Your Oyster 这个世界是你的生蚝</h3>
+        <p>充满童趣与戏谑的声音设计，融合rap与打击乐的实验性趣味。</p>
+        <audio controls><source src="audio/oyster.mp3" type="audio/mpeg"></audio>
+      </div>
+      <div class="card">
+        <h3>Would You Like Some Coconut Milk? 来杯椰奶？</h3>
+        <p>轻快甜美的旋律与和声，流行感与趣味性兼具。</p>
+        <audio controls><source src="audio/give me some coconut milk.mp3" type="audio/mpeg"></audio>
+      </div>
+      <div class="card">
+        <h3>Focaccia and a Cigarette 弗卡夏面包和一支烟</h3>
+        <p>略带忧伤的叙事氛围，节奏克制，旋律简洁。</p>
+        <audio controls><source src="audio/focaccia and a cigarette.mp3" type="audio/mpeg"></audio>
+      </div>
+      <div class="card">
+        <h3>Plums in the Rain 雨中的青李</h3>
+        <p>6/8拍的复古感，融合电子与抒情旋律，副歌朗朗上口。</p>
+        <audio controls><source src="audio/the plum rain.mp3" type="audio/mpeg"></audio>
+      </div>
+      <div class="card">
+        <h3>Do a Magic 变个魔法</h3>
+        <p>如梦境般的飞行幻想，融合弦乐与流行元素，副歌动人。</p>
+        <audio controls><source src="audio/doamagic.mp3" type="audio/mpeg"></audio>
+      </div>
+      <div class="card">
+        <h3>Pumpkin Salad’s AirPods 烤南瓜沙拉的AirPods</h3>
+        <p>数字采样与中英双语说唱的结合，充满现代都市意味。</p>
+        <audio controls><source src="audio/pumpkinsalad.mp3" type="audio/mpeg"></audio>
+      </div>
+      <div class="card">
+        <h3>Every Year We Got the Fish 年年有鱼</h3>
+        <p>钢琴与中国打击乐结合，叙事与合唱交织的情感高潮。</p>
+        <audio controls><source src="audio/every year we got fish.mp3" type="audio/mpeg"></audio>
+      </div>
+      <div class="card">
+        <h3>Winter Nostalgia 冬季游乐园回忆事件</h3>
+        <p>怀旧与浪漫情绪交错，轻快节奏与回忆氛围并存。</p>
+        <audio controls><source src="audio/winternostalgia.mp3" type="audio/mpeg"></audio>
+      </div>
+      <div class="card">
+        <h3>Three Cups of Coffee at Night 早C晚C</h3>
+        <p>专辑结尾，真诚又脆弱的自白，充满反思与情绪张力。</p>
+        <audio controls><source src="audio/three coffee at night.mp3" type="audio/mpeg"></audio>
+      </div>
+    </section>
+
+    <section class="section">
+      <h2>单曲 《Lie to Me》 (2024 · 3m30s)</h2>
+      <p>融合中西方元素，灵感来自张爱玲小说《倾城之恋》，呈现文化碰撞下的爱情幻象。</p>
+      <div class="card">
+        <audio controls><source src="audio/Lie to Me.mp3" type="audio/mpeg"></audio>
+      </div>
+    </section>
+
+    <section class="section">
+      <h2>影视配乐</h2>
+      <div class="card">
+        <h3>剧情短片《纸金鱼》 (2025)</h3>
+        <p>香港浸会大学MFA电影制作毕业设计，原创配乐。</p>
+      </div>
+      <div class="card">
+        <h3>实验短片《Brutalist》 (2025)</h3>
+        <p>伦敦艺术大学MA Digital Art & Experimental Film毕业设计，原创配乐。</p>
+        <iframe height="315" src="http://xhslink.com/o/6ibzpv0D5nT" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </section>
+
+    <footer class="section">
+      <p>© 2025 严书航 · Goldsmiths, University of London MMus Popular Music (Distinction)</p>
+    </footer>
+  </div>
+</body>
 </html>
