--- a/index.html
+++ b/index.html
@@ -21,88 +21,146 @@
   <div class="container">
     <header>
       <h1>严书航 · 作品集</h1>
-      <p>作曲 / 编曲 / 混音 / 作词 / 制作，专注影视配乐与流行音乐</p>
-      <p>📧 联系邮箱: <a href="mailto:charlotteyanbest@gmail.com">charlotteyanbest@gmail.com</a></p>
+      <p>作曲 / 编曲 / 混音 / 作词 / 制作，专注影视配乐与流行音乐 · Base 苏州 / 上海</p>
+      <p>📧 <a href="mailto:charlotteyanbest@gmail.com">charlotteyanbest@gmail.com</a> · <a href="mailto:charlotteyanbest@163.com">charlotteyanbest@163.com</a></p>
     </header>
+
+    <!-- ALBUM COVER -->
+    <section class="section" aria-label="album-cover" style="text-align:center">
+      <img src="images/dinnerparty.jpg" alt="Dinner Party 专辑封面" style="max-width:640px;width:100%;border-radius:18px;box-shadow:0 14px 40px rgba(0,0,0,.45);border:1px solid rgba(255,255,255,.08)"/>
+      <div style="margin-top:10px;color:#8b90a0">Dinner Party · every year we got the fish</div>
+    </section>
 
     <section class="section">
       <h2>专辑 《Dinner Party》 (2025 · 35min)</h2>
-      <p>这是一张十首歌的概念专辑，以“晚宴”为隐喻，将流行、实验与东方元素融合。</p>
+      <p>十首歌构成的一场“晚宴”，在东方元素与另类流行之间游走，强调情绪氛围与叙事表达。</p>
+
       <div class="card">
         <h3>Welcome! 欢迎光临！</h3>
-        <p>开场曲，简洁而真诚的邀请，氛围清晰，有东方韵味。</p>
-        <audio controls><source src="audio/welcome.mp3" type="audio/mpeg"></audio>
+        <p>简洁而真诚的开场，氛围清晰，含东方韵味。</p>
+        <audio controls>
+          <source src="audio/welcome.mp3" type="audio/mpeg">
+          <source src="welcome.mp3" type="audio/mpeg">
+        </audio>
       </div>
       <div class="card">
         <h3>The World is Your Oyster 这个世界是你的生蚝</h3>
-        <p>充满童趣与戏谑的声音设计，融合rap与打击乐的实验性趣味。</p>
-        <audio controls><source src="audio/oyster.mp3" type="audio/mpeg"></audio>
+        <p>童趣与戏谑的声响，rap 与打击乐的实验趣味。</p>
+        <audio controls>
+          <source src="audio/oyster.mp3" type="audio/mpeg">
+          <source src="oyster.mp3" type="audio/mpeg">
+        </audio>
       </div>
       <div class="card">
         <h3>Would You Like Some Coconut Milk? 来杯椰奶？</h3>
-        <p>轻快甜美的旋律与和声，流行感与趣味性兼具。</p>
-        <audio controls><source src="audio/give me some coconut milk.mp3" type="audio/mpeg"></audio>
+        <p>旋律甜美、和声细腻，流行感与趣味性兼具。</p>
+        <audio controls>
+          <source src="audio/give me some coconut milk.mp3" type="audio/mpeg">
+          <source src="give me some coconut milk.mp3" type="audio/mpeg">
+        </audio>
       </div>
       <div class="card">
         <h3>Focaccia and a Cigarette 弗卡夏面包和一支烟</h3>
-        <p>略带忧伤的叙事氛围，节奏克制，旋律简洁。</p>
-        <audio controls><source src="audio/focaccia and a cigarette.mp3" type="audio/mpeg"></audio>
+        <p>略带忧伤的叙事氛围，节奏克制、旋律简洁。</p>
+        <audio controls>
+          <source src="audio/focaccia and a cigarette.mp3" type="audio/mpeg">
+          <source src="focaccia and a cigarette.mp3" type="audio/mpeg">
+        </audio>
       </div>
       <div class="card">
         <h3>Plums in the Rain 雨中的青李</h3>
-        <p>6/8拍的复古感，融合电子与抒情旋律，副歌朗朗上口。</p>
-        <audio controls><source src="audio/the plum rain.mp3" type="audio/mpeg"></audio>
+        <p>6/8 的复古感与电子质地融合，副歌朗朗上口。</p>
+        <audio controls>
+          <source src="audio/the plum rain.mp3" type="audio/mpeg">
+          <source src="the plum rain.mp3" type="audio/mpeg">
+        </audio>
       </div>
       <div class="card">
         <h3>Do a Magic 变个魔法</h3>
-        <p>如梦境般的飞行幻想，融合弦乐与流行元素，副歌动人。</p>
-        <audio controls><source src="audio/doamagic.mp3" type="audio/mpeg"></audio>
+        <p>如梦境般的飞行想象，弦乐与流行元素并置。</p>
+        <audio controls>
+          <source src="audio/doamagic.mp3" type="audio/mpeg">
+          <source src="doamagic.mp3" type="audio/mpeg">
+        </audio>
       </div>
       <div class="card">
-        <h3>Pumpkin Salad’s AirPods 烤南瓜沙拉的AirPods</h3>
-        <p>数字采样与中英双语说唱的结合，充满现代都市意味。</p>
-        <audio controls><source src="audio/pumpkinsalad.mp3" type="audio/mpeg"></audio>
+        <h3>Pumpkin Salad’s AirPods 烤南瓜沙拉的 AirPods</h3>
+        <p>数字采样与中英双语说唱的结合，呈现当代都市感。</p>
+        <audio controls>
+          <source src="audio/pumpkinsalad.mp3" type="audio/mpeg">
+          <source src="pumpkinsalad.mp3" type="audio/mpeg">
+        </audio>
       </div>
       <div class="card">
         <h3>Every Year We Got the Fish 年年有鱼</h3>
-        <p>钢琴与中国打击乐结合，叙事与合唱交织的情感高潮。</p>
-        <audio controls><source src="audio/every year we got fish.mp3" type="audio/mpeg"></audio>
+        <p>钢琴与中国打击乐并置，叙事与合唱交织的情感高点。</p>
+        <audio controls>
+          <source src="audio/every year we got fish.mp3" type="audio/mpeg">
+          <source src="every year we got fish.mp3" type="audio/mpeg">
+        </audio>
       </div>
       <div class="card">
         <h3>Winter Nostalgia 冬季游乐园回忆事件</h3>
-        <p>怀旧与浪漫情绪交错，轻快节奏与回忆氛围并存。</p>
-        <audio controls><source src="audio/winternostalgia.mp3" type="audio/mpeg"></audio>
+        <p>怀旧与浪漫并行，轻快节奏承载回忆氛围。</p>
+        <audio controls>
+          <source src="audio/winternostalgia.mp3" type="audio/mpeg">
+          <source src="winternostalgia.mp3" type="audio/mpeg">
+        </audio>
       </div>
       <div class="card">
-        <h3>Three Cups of Coffee at Night 早C晚C</h3>
-        <p>专辑结尾，真诚又脆弱的自白，充满反思与情绪张力。</p>
-        <audio controls><source src="audio/three coffee at night.mp3" type="audio/mpeg"></audio>
+        <h3>Three Cups of Coffee at Night 早 C 晚 C</h3>
+        <p>收束全辑的脆弱与真诚，自白式结尾。</p>
+        <audio controls>
+          <source src="audio/three coffee at night.mp3" type="audio/mpeg">
+          <source src="three coffee at night.mp3" type="audio/mpeg">
+        </audio>
       </div>
     </section>
 
     <section class="section">
       <h2>单曲 《Lie to Me》 (2024 · 3m30s)</h2>
-      <p>融合中西方元素，灵感来自张爱玲小说《倾城之恋》，呈现文化碰撞下的爱情幻象。</p>
+      <p>融合中西元素，灵感来自张爱玲《倾城之恋》，呈现文化碰撞下的爱情幻象。</p>
       <div class="card">
-        <audio controls><source src="audio/Lie to Me.mp3" type="audio/mpeg"></audio>
+        <audio controls>
+          <source src="audio/Lie to Me.mp3" type="audio/mpeg">
+          <source src="Lie to Me.mp3" type="audio/mpeg">
+        </audio>
       </div>
     </section>
 
     <section class="section">
       <h2>影视配乐</h2>
       <div class="card">
-        <h3>剧情短片《纸金鱼》 (2025)</h3>
-        <p>香港浸会大学MFA电影制作毕业设计，原创配乐。</p>
+        <h3>实验短片《Brutalist》 (2025)</h3>
+        <p>伦敦艺术大学 MA Digital Art & Experimental Film 毕设，原创配乐。本项目通过一部三幕式实验短片，探索粗野主义建筑、数字身份与情绪感知的交汇。作品将粗野主义视为不仅是物理美学，更是当代数字文化中延续的精神语言。通过在 TouchDesigner 与 Unreal Engine 中的生成实验，影片思考原始几何与冷峻混凝土如何承载记忆与乌托邦理想，并揭示社会正义与建筑形式的张力。作品中的“数字幽灵”漂浮于废墟、纪念碑与未来空间之间，象征意识在空间中的延展与重生。</p>
+        <iframe height="380" src="//player.bilibili.com/player.html?bvid=BV1qryQBHELz&autoplay=0&high_quality=1" allowfullscreen frameborder="0"></iframe>
       </div>
       <div class="card">
-        <h3>实验短片《Brutalist》 (2025)</h3>
-        <p>伦敦艺术大学MA Digital Art & Experimental Film毕业设计，原创配乐。</p>
-        <iframe height="315" src="http://xhslink.com/o/6ibzpv0D5nT" frameborder="0" allowfullscreen></iframe>
+        <h3>剧情短片《纸金鱼》 (2025)</h3>
+        <p>《纸金鱼》是一部围绕“轮回、救赎与青春疼痛”展开的实验短片，描绘了两个少女在破碎与重生间的亲密羁绊。影片以超现实的视觉语言呈现女性成长的脆弱与力量，将梦境、记忆与现实交织成一个关于自我拯救的循环。音乐在其中承载着情绪流动的线索，以细腻的音色与节奏变化推动叙事，使作品在静谧与爆发间形成独特的心理张力。</p>
+        
+        <iframe src="//player.bilibili.com/player.html?bvid=BV1jm1zBXEmK&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+      </div>
+    </section>
+
+    <!-- ABOUT ME -->
+    <section class="section" aria-label="about">
+      <h2>关于我</h2>
+      <div style="display:grid;grid-template-columns:220px 1fr;gap:20px;align-items:start">
+        <img src="images/profile.jpg" alt="严书航" style="width:100%;border-radius:18px;box-shadow:0 12px 30px rgba(0,0,0,.45);border:1px solid rgba(255,255,255,.08)"/>
+        <div>
+          <p>严书航（Shuhang Yan），音乐制作与声音艺术，现居苏州 / 上海。以 Distinction 成绩毕业于伦敦大学金史密斯学院（Goldsmiths, University of London）流行音乐硕士。创作融合东方音乐元素与另类流行制作，注重情绪氛围与叙事表达，在实验性与流行性的交汇处探索声音的更多可能。</p>
+          <ul style="margin:0;padding:0;list-style:none;color:#8b90a0;display:grid;gap:6px">
+            <li><strong>专长：</strong>影视/游戏配乐 · 流行音乐制作 · Studio Engineering</li>
+            <li><strong>擅长 DAW：</strong>Logic Pro · Pro Tools</li>
+            <li><strong>教育：</strong>Goldsmiths, MMus Popular Music — honoured with Distinction</li>
+          </ul>
+        </div>
       </div>
     </section>
 
     <footer class="section">
-      <p>© 2025 严书航 · Goldsmiths, University of London MMus Popular Music (Distinction)</p>
+      <p>© 2025 严书航 · Goldsmiths, University of London — MMus Popular Music (Distinction)</p>
     </footer>
   </div>
 </body>
