--- a/index.html
+++ b/index.html
@@ -117,16 +117,17 @@
       </div>
     </section>
 
-    <section class="section">
-      <h2>单曲 《Lie to Me》 (2024 · 3m30s)</h2>
-      <p>融合中西元素，灵感来自张爱玲《倾城之恋》，呈现文化碰撞下的爱情幻象。</p>
-      <div class="card">
-        <audio controls>
-          <source src="audio/Lie to Me.mp3" type="audio/mpeg">
-          <source src="Lie to Me.mp3" type="audio/mpeg">
-        </audio>
-      </div>
-    </section>
+<section class="section">
+  <h2>单曲《Lie to Me》（2024 · 3m30s）</h2>
+  <p>融合中西元素，灵感来自张爱玲《倾城之恋》，呈现文化碰撞下的爱情幻想。</p>
+  
+  <div class="card">
+    <audio controls style="width: 100%;">
+      <source src="Lie to Me.mp3" type="audio/mpeg">
+      您的浏览器不支持音频播放。
+    </audio>
+  </div>
+</section>
 
     <section class="section">
       <h2>影视配乐</h2>
