--- a/index.html
+++ b/index.html
@@ -38,82 +38,72 @@
       <div class="card">
         <h3>Welcome! 欢迎光临！</h3>
         <p>简洁而真诚的开场，氛围清晰，含东方韵味。</p>
-        <audio controls>
-          <source src="audio/welcome.mp3" type="audio/mpeg">
-          <source src="welcome.mp3" type="audio/mpeg">
-        </audio>
+        <audio controls style="width: 100%;">
+      <source src="welcome.mp3" type="audio/mpeg">
+    </audio>
       </div>
       <div class="card">
         <h3>The World is Your Oyster 这个世界是你的生蚝</h3>
         <p>童趣与戏谑的声响，rap 与打击乐的实验趣味。</p>
-        <audio controls>
-          <source src="audio/oyster.mp3" type="audio/mpeg">
-          <source src="oyster.mp3" type="audio/mpeg">
-        </audio>
+         <audio controls style="width: 100%;">
+      <source src="oyster.mp3" type="audio/mpeg">
+    </audio>
       </div>
       <div class="card">
         <h3>Would You Like Some Coconut Milk? 来杯椰奶？</h3>
         <p>旋律甜美、和声细腻，流行感与趣味性兼具。</p>
-        <audio controls>
-          <source src="audio/give me some coconut milk.mp3" type="audio/mpeg">
-          <source src="give me some coconut milk.mp3" type="audio/mpeg">
-        </audio>
+         <audio controls style="width: 100%;">
+      <source src="give me some coconut milk.mp3" type="audio/mpeg">
+    </audio>
       </div>
       <div class="card">
         <h3>Focaccia and a Cigarette 弗卡夏面包和一支烟</h3>
         <p>略带忧伤的叙事氛围，节奏克制、旋律简洁。</p>
-        <audio controls>
-          <source src="audio/focaccia and a cigarette.mp3" type="audio/mpeg">
-          <source src="focaccia and a cigarette.mp3" type="audio/mpeg">
-        </audio>
+        <audio controls style="width: 100%;">
+      <source src="focaccia and a cigarette.mp3" type="audio/mpeg">
+    </audio>
       </div>
       <div class="card">
         <h3>Plums in the Rain 雨中的青李</h3>
         <p>6/8 的复古感与电子质地融合，副歌朗朗上口。</p>
-        <audio controls>
-          <source src="audio/the plum rain.mp3" type="audio/mpeg">
-          <source src="the plum rain.mp3" type="audio/mpeg">
-        </audio>
+        <audio controls style="width: 100%;">
+      <source src="the plum rain.mp3" type="audio/mpeg">
+    </audio>
       </div>
       <div class="card">
         <h3>Do a Magic 变个魔法</h3>
         <p>如梦境般的飞行想象，弦乐与流行元素并置。</p>
-        <audio controls>
-          <source src="audio/doamagic.mp3" type="audio/mpeg">
-          <source src="doamagic.mp3" type="audio/mpeg">
-        </audio>
+        <audio controls style="width: 100%;">
+      <source src="doamagic.mp3" type="audio/mpeg">
+    </audio>
       </div>
       <div class="card">
         <h3>Pumpkin Salad’s AirPods 烤南瓜沙拉的 AirPods</h3>
         <p>数字采样与中英双语说唱的结合，呈现当代都市感。</p>
-        <audio controls>
-          <source src="audio/pumpkinsalad.mp3" type="audio/mpeg">
-          <source src="pumpkinsalad.mp3" type="audio/mpeg">
-        </audio>
+        <audio controls style="width: 100%;">
+      <source src="pumpkinsalad.mp3" type="audio/mpeg">
+    </audio>
       </div>
       <div class="card">
         <h3>Every Year We Got the Fish 年年有鱼</h3>
         <p>钢琴与中国打击乐并置，叙事与合唱交织的情感高点。</p>
-        <audio controls>
-          <source src="audio/every year we got fish.mp3" type="audio/mpeg">
-          <source src="every year we got fish.mp3" type="audio/mpeg">
-        </audio>
+        <audio controls style="width: 100%;">
+      <source src="every year we got fish.mp3" type="audio/mpeg">
+    </audio>
       </div>
       <div class="card">
         <h3>Winter Nostalgia 冬季游乐园回忆事件</h3>
         <p>怀旧与浪漫并行，轻快节奏承载回忆氛围。</p>
-        <audio controls>
-          <source src="audio/winternostalgia.mp3" type="audio/mpeg">
-          <source src="winternostalgia.mp3" type="audio/mpeg">
-        </audio>
+        <audio controls style="width: 100%;">
+      <source src="winternostalgia.mp3" type="audio/mpeg">
+    </audio>
       </div>
       <div class="card">
         <h3>Three Cups of Coffee at Night 早 C 晚 C</h3>
         <p>收束全辑的脆弱与真诚，自白式结尾。</p>
-        <audio controls>
-          <source src="audio/three coffee at night.mp3" type="audio/mpeg">
-          <source src="three coffee at night.mp3" type="audio/mpeg">
-        </audio>
+        <audio controls style="width: 100%;">
+      <source src="three coffee at night.mp3" type="audio/mpeg">
+    </audio>
       </div>
     </section>
 
@@ -133,13 +123,15 @@
       <h2>影视配乐</h2>
       <div class="card">
         <h3>实验短片《Brutalist》 (2025)</h3>
-        <p>伦敦艺术大学 MA Digital Art & Experimental Film 毕设，原创配乐。本项目通过一部三幕式实验短片，探索粗野主义建筑、数字身份与情绪感知的交汇。作品将粗野主义视为不仅是物理美学，更是当代数字文化中延续的精神语言。通过在 TouchDesigner 与 Unreal Engine 中的生成实验，影片思考原始几何与冷峻混凝土如何承载记忆与乌托邦理想，并揭示社会正义与建筑形式的张力。作品中的“数字幽灵”漂浮于废墟、纪念碑与未来空间之间，象征意识在空间中的延展与重生。</p>
+        <p>伦敦艺术大学 MA Digital Art & Experimental Film 毕设，原创配乐。</p>
+        <p>本项目通过一部三幕式实验短片，探索粗野主义建筑、数字身份与情绪感知的交汇。作品将粗野主义视为不仅是物理美学，更是当代数字文化中延续的精神语言。通过在 TouchDesigner 与 Unreal Engine 中的生成实验，影片思考原始几何与冷峻混凝土如何承载记忆与乌托邦理想，并揭示社会正义与建筑形式的张力。作品中的“数字幽灵”漂浮于废墟、纪念碑与未来空间之间，象征意识在空间中的延展与重生。</p>
         <iframe height="380" src="//player.bilibili.com/player.html?bvid=BV1qryQBHELz&autoplay=0&high_quality=1" allowfullscreen frameborder="0"></iframe>
       </div>
       <div class="card">
         <h3>剧情短片《纸金鱼》 (2025)</h3>
+        <p>香港浸会大学 MFA Film 毕设短片，原创配乐。
         <p>《纸金鱼》是一部围绕“轮回、救赎与青春疼痛”展开的实验短片，描绘了两个少女在破碎与重生间的亲密羁绊。影片以超现实的视觉语言呈现女性成长的脆弱与力量，将梦境、记忆与现实交织成一个关于自我拯救的循环。音乐在其中承载着情绪流动的线索，以细腻的音色与节奏变化推动叙事，使作品在静谧与爆发间形成独特的心理张力。</p>
-        
+          </p>
         <iframe src="//player.bilibili.com/player.html?bvid=BV1jm1zBXEmK&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
       </div>
     </section>
