Fix image source paths in index.html
Updated image paths in the HTML file to remove 'images/' prefix.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- ALBUM COVER -->
     <section class="section" aria-label="album-cover" style="text-align:center">
-      <img src="images/dinnerparty.jpg" alt="Dinner Party 专辑封面" style="max-width:640px;width:100%;border-radius:18px;box-shadow:0 14px 40px rgba(0,0,0,.45);border:1px solid rgba(255,255,255,.08)"/>
+      <img src="dinnerparty.jpg" alt="Dinner Party 专辑封面">
       <div style="margin-top:10px;color:#8b90a0">Dinner Party · every year we got the fish</div>
     </section>
 
@@ -140,7 +140,7 @@
     <section class="section" aria-label="about">
       <h2>关于我</h2>
       <div style="display:grid;grid-template-columns:220px 1fr;gap:20px;align-items:start">
-        <img src="images/profile.jpg" alt="严书航" style="width:100%;border-radius:18px;box-shadow:0 12px 30px rgba(0,0,0,.45);border:1px solid rgba(255,255,255,.08)"/>
+        <img src="profile.jpg" alt="严书航">
         <div>
           <p>严书航（Shuhang Yan），音乐制作与声音艺术，现居苏州 / 上海。以 Distinction 成绩毕业于伦敦大学金史密斯学院（Goldsmiths, University of London）流行音乐硕士。创作融合东方音乐元素与另类流行制作，注重情绪氛围与叙事表达，在实验性与流行性的交汇处探索声音的更多可能。</p>
           <ul style="margin:0;padding:0;list-style:none;color:#8b90a0;display:grid;gap:6px">
