Update footer text with new name

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     </section>
 
     <footer class="section">
-      <p>© 2025 严书航 · Goldsmiths, University of London — MMus Popular Music (Distinction)</p>
+      <p>© 2025 严书航 · Shuhang Yan</p>
     </footer>
   </div>
 </body>
