--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
       <p>📧 <a href="mailto:charlotteyanbest@gmail.com">charlotteyanbest@gmail.com</a> · <a href="mailto:charlotteyanbest@163.com">charlotteyanbest@163.com</a></p>
     </header>
 
-    <!-- ALBUM COVER -->
-    <section class="section" aria-label="album-cover" style="text-align:center">
-      <img src="dinnerparty.jpg" alt="Dinner Party 专辑封面" style="width:30%; height:auto;">
-      <div style="margin-top:10px;color:#8b90a0">Dinner Party · every year we got the fish</div>
-    </section>
-
-    <section class="section">
-      <h2>专辑 《Dinner Party》 (2025 · 35min)</h2>
-      <p>《Dinner Party》是一场关于成长、孤独与温柔的声音盛宴。作品以“晚宴”为隐喻，通过十一首围绕食物与情感的歌曲，构建出一段从邀请、相遇到告别的心理旅程。每首作品对应一道菜、一种情绪，也是一场内心的对话。专辑融合中英文歌词、东方声采与 hyperpop、ambient 等多重风格，呈现当代独立音乐人对身份与情感的自我书写。从轻盈的《Welcome!》到回味悠长的《Every Year We Got the Fish》，《Dinner Party》既是一次对生活日常的重新审视，也是一次关于记忆、欲望与自我认知的温柔叙事。</p>
-
+ <section id="album">
+  <img src="dinnerparty.jpg" alt="Dinner Party 封面" 
+       style="width:30%; height:auto; float:left; margin-right:20px; border-radius:10px;">
+  
+  <p>
+    《Dinner Party》是一场关于成长、孤独与温柔的声音盛宴。作品以“晚宴”为隐喻，通过十一首围绕食物与情感的歌曲，
+    构建出一段从邀请、相遇到告别的心理旅程。专辑融合中英文歌词、东方声采与 hyperpop、ambient 等多重风格，
+    呈现当代独立音乐人对身份与情感的自我书写。
+  </p>
+</section>
+    
       <div class="card">
         <h3>Welcome! 欢迎光临！</h3>
         <p>以轻盈的电子质感和微醺节奏营造出“晚宴”正式开始前的氛围。旋律中带有一点调皮的期待感，仿佛听众正推开门、走入一个模糊又闪烁的梦境空间。</p>
