--- a/index.html
+++ b/index.html
@@ -25,82 +25,91 @@
       <p>📧 <a href="mailto:charlotteyanbest@gmail.com">charlotteyanbest@gmail.com</a> · <a href="mailto:charlotteyanbest@163.com">charlotteyanbest@163.com</a></p>
     </header>
 
- <section id="album">
-  <img src="dinnerparty.jpg" alt="Dinner Party 封面" 
-       style="width:30%; height:auto; float:left; margin-right:20px; border-radius:10px;">
-  
-  <p>
-    《Dinner Party》是一场关于成长、孤独与温柔的声音盛宴。作品以“晚宴”为隐喻，通过十一首围绕食物与情感的歌曲，
-    构建出一段从邀请、相遇到告别的心理旅程。专辑融合中英文歌词、东方声采与 hyperpop、ambient 等多重风格，
-    呈现当代独立音乐人对身份与情感的自我书写。
-  </p>
+<section id="album" style="margin: 60px 0;">
+  <div style="display: flex; align-items: flex-start; gap: 30px;">
+    <img src="dinnerparty.jpg" alt="Dinner Party 封面" 
+         style="width:25%; border-radius:12px; flex-shrink:0;">
+    
+    <div style="flex:1;">
+      <h2 style="margin-top:0;"> 🍷《Dinner Party》</h2>
+      <p style="line-height:1.7;">
+        《Dinner Party》是一场关于成长、孤独与温柔的声音盛宴。作品以“晚宴”为隐喻，
+        通过十一首围绕食物与情感的歌曲，构建出一段从邀请、相遇到告别的心理旅程。
+        每首作品对应一道菜、一种情绪，也是一场内心的对话。专辑融合中英文歌词、
+        东方声采与 hyperpop、ambient 等多重风格，呈现当代独立音乐人对身份与情感的自我书写。
+        从轻盈的《Welcome!》到回味悠长的《Every Year We Got the Fish》，
+        《Dinner Party》既是一次对生活日常的重新审视，
+        也是一次关于记忆、欲望与自我认知的温柔叙事。
+      </p>
+    </div>
+  </div>
 </section>
     
       <div class="card">
-        <h3>Welcome! 欢迎光临！</h3>
+        <h3>Welcome! 👏欢迎光临！</h3>
         <p>以轻盈的电子质感和微醺节奏营造出“晚宴”正式开始前的氛围。旋律中带有一点调皮的期待感，仿佛听众正推开门、走入一个模糊又闪烁的梦境空间。</p>
         <audio controls style="width: 100%;">
       <source src="welcome.mp3" type="audio/mpeg">
     </audio>
       </div>
       <div class="card">
-        <h3>The World is Your Oyster 这个世界是你的生蚝</h3>
+        <h3>The World is Your Oyster 🦪这个世界是你的生蚝</h3>
         <p>以轻快的节奏与 child-like 的音色展现自由与探索的精神，歌词在中英文之间切换，带着俏皮与真诚。清晰的声线与活泼的编曲营造出一场关于自我介绍与世界拥抱的开场。</p>
          <audio controls style="width: 100%;">
       <source src="oyster.mp3" type="audio/mpeg">
     </audio>
       </div>
       <div class="card">
-        <h3>Would You Like Some Coconut Milk? 来杯椰奶？</h3>
+        <h3>Would You Like Some Coconut Milk? 🥛来杯椰奶？</h3>
         <p>灵感来自童年与友情的饮品曲。中英混合歌词、上海话采样与儿歌片段构成幽默又温柔的层次，像一杯甜中带笑的椰奶，玩味又治愈。</p>
          <audio controls style="width: 100%;">
       <source src="give me some coconut milk.mp3" type="audio/mpeg">
     </audio>
       </div>
       <div class="card">
-        <h3>Focaccia and a Cigarette 弗卡夏面包和一支烟</h3>
+        <h3>Focaccia and a Cigarette 🍞🚬弗卡夏面包和一支烟</h3>
         <p>带着秋日余温的孤独主食。极简编曲与微醺声线诉说分别后的平静与思念，如一人餐桌上的烟雾与面包香，温柔又克制。</p>
         <audio controls style="width: 100%;">
       <source src="focaccia and a cigarette.mp3" type="audio/mpeg">
     </audio>
       </div>
       <div class="card">
-        <h3>Plums in the Rain 雨中的青李</h3>
+        <h3>Plums in the Rain ☔️雨中的青李</h3>
         <p>忧郁而细腻的 6/8 节奏在雨声间延展。电子与复古声线交错，描绘离别、成长与自我和解的瞬间，像一盘酸甜适中的青梅沙拉。</p>
         <audio controls style="width: 100%;">
       <source src="the plum rain.mp3" type="audio/mpeg">
     </audio>
       </div>
       <div class="card">
-        <h3>Do a Magic 变个魔法</h3>
+        <h3>Do a Magic 🪄变个魔法</h3>
         <p>充满梦境与勇气的“魔术秀”。中西融合的音色与动漫感旋律勾勒出奇幻与力量的并存，提醒人们保持浪漫与想象力。</p>
         <audio controls style="width: 100%;">
       <source src="doamagic.mp3" type="audio/mpeg">
     </audio>
       </div>
       <div class="card">
-        <h3>Pumpkin Salad’s AirPods 烤南瓜沙拉的 AirPods</h3>
+        <h3>Pumpkin Salad’s AirPods 🎃烤南瓜沙拉的 AirPods</h3>
         <p>一首关于都市节奏与数字孤独的俏皮插曲。将 AirPods 提示音与 hyper 数码节拍重组成辛辣、机灵的歌曲风格。呈现当代都市感。</p>
         <audio controls style="width: 100%;">
       <source src="pumpkinsalad.mp3" type="audio/mpeg">
     </audio>
       </div>
       <div class="card">
-        <h3>Every Year We Got the Fish 年年有鱼</h3>
+        <h3>Every Year We Got the Fish 🧧🐟年年有鱼</h3>
         <p>主菜，取材自苏州评弹《姑苏好风光》。传统吴语唱段与现代电子编排融合，象征团圆与时间流逝，是整张专辑的文化与情感核心。</p>
         <audio controls style="width: 100%;">
       <source src="every year we got fish.mp3" type="audio/mpeg">
     </audio>
       </div>
       <div class="card">
-        <h3>Winter Nostalgia 冬季游乐园回忆事件</h3>
+        <h3>Winter Nostalgia 🍰冬季游乐园回忆事件</h3>
         <p>以冬日恋爱为主题的甜品曲。梦幻的 lo-fi 吉他与呼吸感人声营造温柔的怀旧感，像一块融化的芝士蛋糕，冰冷却柔软。</p>
         <audio controls style="width: 100%;">
       <source src="winternostalgia.mp3" type="audio/mpeg">
     </audio>
       </div>
       <div class="card">
-        <h3>Three Cups of Coffee at Night 早 C 晚 C</h3>
+        <h3>Three Cups of Coffee at Night ☕️早 C 晚 C</h3>
         <p>整场晚宴的尾声——一杯带苦意的咖啡。以幽默与脆弱并存的笔触写下深夜工作的倦怠与自我安慰，留下温热的余味。</p>
         <audio controls style="width: 100%;">
       <source src="three coffee at night.mp3" type="audio/mpeg">
@@ -141,7 +150,7 @@
     <section class="section" aria-label="about">
       <h2>关于我</h2>
       <div style="display:grid;grid-template-columns:220px 1fr;gap:20px;align-items:start">
-        <img src="profile.jpg" alt="严书航" style="width:70%; height:auto; border-radius:10px;">
+        <img src="profile.jpg" alt="严书航" style="width:80%; height:auto; border-radius:10px;">
         <div>
           <p>严书航（Shuhang Yan），音乐制作与声音艺术，现居苏州 / 上海。以 Distinction 成绩毕业于伦敦大学金史密斯学院（Goldsmiths, University of London）流行音乐硕士。创作融合东方音乐元素与另类流行制作，注重情绪氛围与叙事表达，在实验性与流行性的交汇处探索声音的更多可能。</p>
           <ul style="margin:0;padding:0;list-style:none;color:#8b90a0;display:grid;gap:6px">
