Refine description of 'Dinner Party' album

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <div style="flex:1;">
       <h2 style="margin-top:0;">🍷 《Dinner Party》</h2>
       <p style="line-height:1.7;">
-        《Dinner Party》是一场关于成长、孤独与温柔的声音盛宴。作品以“晚宴”为隐喻，
-        通过十一首围绕食物与情感的歌曲，构建出一段从邀请、相遇到告别的心理旅程。
+        《Dinner Party》是一场关于成长、孤独与温柔的声音晚宴。作品以“晚宴”为隐喻，
+        通过十首围绕食物，故事与情感的歌曲，构建出一段从邀请、相遇到告别的晚餐旅程。
         每首作品对应一道菜、一种情绪，也是一场内心的对话。专辑融合中英文歌词、
-        东方声采与 hyperpop、ambient 等多重风格，呈现当代独立音乐人对身份与情感的自我书写。
+        东方元素采样与 hyperpop、ambient 等多重风格，呈现当代独立音乐人对身份与情感的自我书写。
         从轻盈的《Welcome!》到回味悠长的《Every Year We Got the Fish》，
         《Dinner Party》既是一次对生活日常的重新审视，
         也是一次关于记忆、欲望与自我认知的温柔叙事。
