--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div style="display: flex; align-items: flex-start; gap: 30px;">
     
     <div style="flex:1;">
-      <h2 style="margin-top:0;">🍷 《Dinner Party》</h2>
+      <h2 style="margin-top:0;">ALBUM 🍷 《Dinner Party》</h2>
       <p style="line-height:1.7;">
         《Dinner Party》是一场关于成长、孤独与温柔的声音晚宴。作品以“晚宴”为隐喻，
         通过十首围绕食物，故事与情感的歌曲，构建出一段从邀请、相遇到告别的晚餐旅程。
@@ -42,7 +42,7 @@
     </div>
 
     <img src="dinnerparty.jpg" alt="Dinner Party 封面" 
-         style="width:25%; border-radius:12px; flex-shrink:0;">
+         style="width:30%; border-radius:12px; flex-shrink:0;">
   </div>
 </section>
 
